# crawler_rust

./: Cargo.toml  conf.ini  conf1.ini
src/: generate_xb.rs  lib.rs  main.rs
