[package]
name = "dy_xhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
md5 = "0.7.0"
miow = "0.6.0"
mobc = "0.8.4"
mobc-redis = "0.8.2"
rc4 = "0.1.0"
redis = "0.25.3"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
rust-ini = "0.21.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
validator = { version = "0.18.1", features = ["derive"] }
windows-sys = "0.52.0"
